# django_simple_auth

./: README.md  pyproject.toml
app/: urls.py  views.py
django_simple_auth/: settings.py  urls.py
templates/: base.html  dashboard.html  home.html  login.html  nav.html  register.html
